# sucharypl-python

./: LICENSE  README.md  pyproject.toml
src/sucharypython/: __init__.py  core.py
